@@ -1386,7 +1386,7 @@ Expression *Index(Type *type, Expression *e1, Expression *e2)
 
         if (i >= es1->len)
         {
-            e1->error("string index %"PRIuMAX" is out of bounds [0 .. %"PRIuSIZE"]", i, es1->len);
+            e1->error("string index %llu is out of bounds [0 .. %llu]", i, (ulonglong)es1->len);
             e = new ErrorExp();
         }
         else
@@ -1401,7 +1401,7 @@ Expression *Index(Type *type, Expression *e1, Expression *e2)
 
         if (i >= length)
         {
-            e1->error("array index %"PRIuMAX" is out of bounds %s[0 .. %"PRIuMAX"]", i, e1->toChars(), length);
+            e1->error("array index %llu is out of bounds %s[0 .. %llu]", i, e1->toChars(), length);
             e = new ErrorExp();
         }
         else if (e1->op == TOKarrayliteral)
@@ -1420,7 +1420,7 @@ Expression *Index(Type *type, Expression *e1, Expression *e2)
         {   ArrayLiteralExp *ale = (ArrayLiteralExp *)e1;
             if (i >= ale->elements->dim)
             {
-                e1->error("array index %"PRIuMAX" is out of bounds %s[0 .. %u]", i, e1->toChars(), ale->elements->dim);
+                e1->error("array index %llu is out of bounds %s[0 .. %u]", i, e1->toChars(), ale->elements->dim);
                 e = new ErrorExp();
             }
             else
@@ -1476,7 +1476,7 @@ Expression *Slice(Type *type, Expression *e1, Expression *lwr, Expression *upr)
 
         if (iupr > es1->len || ilwr > iupr)
         {
-            e1->error("string slice [%"PRIuMAX" .. %"PRIuMAX"] is out of bounds", ilwr, iupr);
+            e1->error("string slice [%llu .. %llu] is out of bounds", ilwr, iupr);
             e = new ErrorExp();
         }
         else
@@ -1506,7 +1506,7 @@ Expression *Slice(Type *type, Expression *e1, Expression *lwr, Expression *upr)
 
         if (iupr > es1->elements->dim || ilwr > iupr)
         {
-            e1->error("array slice [%"PRIuMAX" .. %"PRIuMAX"] is out of bounds", ilwr, iupr);
+            e1->error("array slice [%llu .. %llu] is out of bounds", ilwr, iupr);
             e = new ErrorExp();
         }
         else
