@@ -127,11 +127,11 @@ const char *Token::toChars()
             break;
 
         case TOKint64v:
-            sprintf(buffer,"%"PRIdMAX"L",(intmax_t)int64value);
+            sprintf(buffer,"%lldL",(intmax_t)int64value);
             break;
 
         case TOKuns64v:
-            sprintf(buffer,"%"PRIuMAX"UL",(uintmax_t)uns64value);
+            sprintf(buffer,"%lluUL",(uintmax_t)uns64value);
             break;
 
 #ifdef IN_GCC
@@ -149,31 +149,31 @@ const char *Token::toChars()
             break;
 #else
         case TOKfloat32v:
-            sprintf(buffer,"%Lgf", float80value);
+            ld_sprint(buffer, 'g', float80value);
             strcat(buffer, "f");
             break;
 
         case TOKfloat64v:
-            sprintf(buffer,"%Lg", float80value);
+            ld_sprint(buffer, 'g', float80value);
             break;
 
         case TOKfloat80v:
-            sprintf(buffer,"%Lg", float80value);
+            ld_sprint(buffer, 'g', float80value);
             strcat(buffer, "L");
             break;
 
         case TOKimaginary32v:
-            sprintf(buffer,"%Lg", float80value);
+            ld_sprint(buffer, 'g', float80value);
             strcat(buffer, "fi");
             break;
 
         case TOKimaginary64v:
-            sprintf(buffer,"%Lg", float80value);
+            ld_sprint(buffer, 'g', float80value);
             strcat(buffer, "i");
             break;
 
         case TOKimaginary80v:
-            sprintf(buffer,"%Lg", float80value);
+            ld_sprint(buffer, 'g', float80value);
             strcat(buffer, "Li");
             break;
 #endif
