@@ -240,7 +240,7 @@ char *TemplateInstance::mangle()
             buf.writestring(p);
         }
     }
-    buf.printf("%"PRIuSIZE"%s", strlen(id), id);
+    buf.printf("%llu%s", (ulonglong)strlen(id), id);
     id = buf.toChars();
     buf.data = NULL;
     //printf("TemplateInstance::mangle() %s = %s\n", toChars(), id);
@@ -268,7 +268,7 @@ char *Dsymbol::mangle()
             p += 2;
         buf.writestring(p);
     }
-    buf.printf("%"PRIuSIZE"%s", strlen(id), id);
+    buf.printf("%llu%s", (ulonglong)strlen(id), id);
     id = buf.toChars();
     buf.data = NULL;
     //printf("Dsymbol::mangle() %s = %s\n", toChars(), id);
