@@ -1,3 +1,8 @@
+2012-07-13  Iain Buclaw  <ibuclaw@ubuntu.com>
+
+	* d-decls.cc(Dsymbol::toSymbolX): Remove use of PRIuSIZE format macro.
+	(FuncDeclaration::toThunkSymbol): Likewise.
+
 2012-07-12  Iain Buclaw  <ibuclaw@ubuntu.com>
 
 	* d-lang.h(D_DECL_IS_CONTRACT): New macro.
